--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -1,14 +1,13 @@
 
 \clearpage
 %\LongTables
-\begin{deluxetable*}{lclccccccc}
+\begin{deluxetable*}{ccccccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
 \tablecaption{False Positive Probability Calculation Results}
 \label{Table:FPP}
 \tablehead{
-\colhead{EPIC} &
-\colhead{Cand. Num.} &
+\colhead{Candidate} &
 \colhead{max($\delta_{\rm sec}$)} &
 \colhead{AO?} &
 \colhead{${\rm Pr}_{\rm EB}$} &
@@ -19,42 +18,42 @@
 \colhead{Disposition}
 }
 \startdata
-$201208431$ & $1$ & $0.51$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $7.0\times10^{-4}$ & $0.21$ & $7.0\times10^{-4}$ & Planet \\
- \color{red} $201257461$  & \color{red}  $1$  & \color{red}  $0.59$  & \color{red}   -  & \color{red}  $8.8\times10^{-3}$  & \color{red}  $0.940$  & \color{red}  $0.051$  & \color{red}  $0.17$  & \color{red}  $1.000$  & \color{red}  FP\\
-$201295312$ & $1$ & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
-$201338508$ & $1$ & $0.63$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $3.2\times10^{-3}$ & Planet \\
-$201338508$ & $2$ & $0.33$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $1.8\times10^{-4}$ & $0.22$ & $1.8\times10^{-4}$ & Planet \\
-$201367065$ & $1$ & $0.15$ &  - & $0.717$ & $< 10^{-4}$ & $0.044$ & $0.07$ & $0.761$ & Candidate \\
-$201367065$ & $2$ & $0.67$ &  - & $3.2\times10^{-3}$ & $< 10^{-4}$ & $4.2\times10^{-3}$ & $0.17$ & $7.4\times10^{-3}$ & Planet \\
-$201384232$ & $1$ & $0.44$ &  - & $1.2\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $1.4\times10^{-4}$ & Planet \\
-$201393098$ & $1$ & $0.52$ &  - & $1.6\times10^{-3}$ & $< 10^{-4}$ & $5.5\times10^{-4}$ & $0.19$ & $2.2\times10^{-3}$ & Planet \\
-$201403446$ & $1$ & $0.18$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
-$201445392$ & $1$ & $0.26$ &  - & $1.3\times10^{-3}$ & $< 10^{-4}$ & $0.012$ & $0.19$ & $0.013$ & Candidate \\
-$201445392$ & $2$ & $0.18$ &  - & $0.023$ & $< 10^{-4}$ & $0.254$ & $0.21$ & $0.277$ & Candidate \\
-$201465501$ & $1$ & $0.68$ &  - & $0.491$ & $0.022$ & $9.1\times10^{-3}$ & $0.20$ & $0.522$ & Candidate \\
-$201505350$ & $1$ & $2.69$ &  - & $0.583$ & $< 10^{-4}$ & $0.024$ & $0.07$ & $0.607$ & Candidate \\
-$201505350$ & $2$ & $0.70$ &  - & $0.034$ & $< 10^{-4}$ & $2.3\times10^{-4}$ & $0.07$ & $0.034$ & Candidate \\
-$201546283$ & $1$ & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.06$ & $1.1\times10^{-4}$ & Planet \\
-$201549860$ & $1$ & $0.18$ &  - & $7.5\times10^{-3}$ & $0.014$ & $0.011$ & $0.22$ & $0.032$ & Candidate \\
-$201555883$ & $1$ & $0.94$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.6\times10^{-3}$ & $0.10$ & $3.6\times10^{-3}$ & Planet \\
-$201565013$ & $1$ & $1.69$ &  - & $0.460$ & $0.391$ & $0.035$ & $0.06$ & $0.887$ & Candidate \\
- \color{red} $201569483$  & \color{red}  $1$  & \color{red}  $2.06$  & \color{red}   -  & \color{red}  $0.437$  & \color{red}  $0.562$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.999$  & \color{red}  FP\\
-$201577035$ & $1$ & $0.14$ &  Y & $3.0\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.07$ & $3.6\times10^{-4}$ & Planet \\
-$201596316$ & $1$ & $0.45$ &  - & $0.017$ & $< 10^{-4}$ & $3.4\times10^{-4}$ & $0.20$ & $0.017$ & Candidate \\
-$201613023$ & $1$ & $0.08$ &  Y & $9.8\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.20$ & $9.8\times10^{-4}$ & Planet \\
-$201617985$ & $1$ & $0.27$ &  - & $0.166$ & $< 10^{-4}$ & $0.053$ & $0.19$ & $0.219$ & Candidate \\
-$201629650$ & $1$ & $0.43$ &  - & $1.5\times10^{-3}$ & $< 10^{-4}$ & $2.6\times10^{-4}$ & $0.18$ & $1.8\times10^{-3}$ & Planet \\
-$201635569$ & $1$ & $0.79$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $0.043$ & $0.06$ & $0.043$ & Candidate \\
- \color{red} $201649426$  & \color{red}  $1$  & \color{red}  $3.10$  & \color{red}   -  & \color{red}  $0.856$  & \color{red}  $0.142$  & \color{red}  $1.6\times10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.998$  & \color{red}  FP\\
-$201702477$ & $1$ & $0.70$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $4.0\times10^{-3}$ & $0.06$ & $4.0\times10^{-3}$ & Planet \\
-$201736247$ & $1$ & $0.42$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $4.6\times10^{-4}$ & $0.18$ & $4.9\times10^{-4}$ & Planet \\
-$201754305$ & $1$ & $0.65$ &  - & $2.5\times10^{-3}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $5.7\times10^{-3}$ & Planet \\
-$201754305$ & $2$ & $0.38$ &  - & $1.9\times10^{-3}$ & $< 10^{-4}$ & $1.7\times10^{-3}$ & $0.22$ & $3.6\times10^{-3}$ & Planet \\
- \color{red} $201779067$  & \color{red}  $1$  & \color{red}  $1.97$  & \color{red}   -  & \color{red}  $0.935$  & \color{red}  $0.063$  & \color{red}  $3.2\times10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.998$  & \color{red}  FP\\
-$201828749$ & $1$ & $0.39$ &  Y & $2.6\times10^{-3}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.17$ & $2.6\times10^{-3}$ & Planet \\
-$201855371$ & $1$ & $0.62$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
-$201912552$ & $1$ & $0.47$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
-$201929294$ & $1$ & $3.12$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $2.8\times10^{-4}$ & $0.07$ & $2.9\times10^{-4}$ & Planet 
+201208431.01 & $0.51$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $7.0\times10^{-4}$ & $0.21$ & $7.0\times10^{-4}$ & Planet \\
+ \color{red} 201257461.01  & \color{red}  $0.59$  & \color{red}   -  & \color{red}  $8.8\times10^{-3}$  & \color{red}  $0.940$  & \color{red}  $0.051$  & \color{red}  $0.17$  & \color{red}  $1.000$  & \color{red}  FP\\
+201295312.01 & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
+201338508.01 & $0.63$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $3.2\times10^{-3}$ & Planet \\
+201338508.02 & $0.33$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $1.8\times10^{-4}$ & $0.22$ & $1.8\times10^{-4}$ & Planet \\
+201367065.01 & $0.15$ &  - & $0.717$ & $< 10^{-4}$ & $0.044$ & $0.07$ & $0.761$ & Candidate \\
+201367065.02 & $0.67$ &  - & $3.2\times10^{-3}$ & $< 10^{-4}$ & $4.2\times10^{-3}$ & $0.17$ & $7.4\times10^{-3}$ & Planet \\
+201384232.01 & $0.44$ &  - & $1.2\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $1.4\times10^{-4}$ & Planet \\
+201393098.01 & $0.52$ &  - & $1.6\times10^{-3}$ & $< 10^{-4}$ & $5.5\times10^{-4}$ & $0.19$ & $2.2\times10^{-3}$ & Planet \\
+201403446.01 & $0.18$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
+201445392.01 & $0.26$ &  - & $1.3\times10^{-3}$ & $< 10^{-4}$ & $0.012$ & $0.19$ & $0.013$ & Candidate \\
+201445392.02 & $0.18$ &  - & $0.023$ & $< 10^{-4}$ & $0.254$ & $0.21$ & $0.277$ & Candidate \\
+201465501.01 & $0.68$ &  - & $0.491$ & $0.022$ & $9.1\times10^{-3}$ & $0.20$ & $0.522$ & Candidate \\
+201505350.01 & $2.69$ &  - & $0.583$ & $< 10^{-4}$ & $0.024$ & $0.07$ & $0.607$ & Candidate \\
+201505350.02 & $0.70$ &  - & $0.034$ & $< 10^{-4}$ & $2.3\times10^{-4}$ & $0.07$ & $0.034$ & Candidate \\
+201546283.01 & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.06$ & $1.1\times10^{-4}$ & Planet \\
+201549860.01 & $0.18$ &  - & $7.5\times10^{-3}$ & $0.014$ & $0.011$ & $0.22$ & $0.032$ & Candidate \\
+201555883.01 & $0.94$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.6\times10^{-3}$ & $0.10$ & $3.6\times10^{-3}$ & Planet \\
+201565013.01 & $1.69$ &  - & $0.460$ & $0.391$ & $0.035$ & $0.06$ & $0.887$ & Candidate \\
+ \color{red} 201569483.01  & \color{red}  $2.06$  & \color{red}   -  & \color{red}  $0.437$  & \color{red}  $0.562$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.999$  & \color{red}  FP\\
+201577035.01 & $0.14$ &  Y & $3.0\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.07$ & $3.6\times10^{-4}$ & Planet \\
+201596316.01 & $0.45$ &  - & $0.017$ & $< 10^{-4}$ & $3.4\times10^{-4}$ & $0.20$ & $0.017$ & Candidate \\
+201613023.01 & $0.08$ &  Y & $9.8\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.20$ & $9.8\times10^{-4}$ & Planet \\
+201617985.01 & $0.27$ &  - & $0.166$ & $< 10^{-4}$ & $0.053$ & $0.19$ & $0.219$ & Candidate \\
+201629650.01 & $0.43$ &  - & $1.5\times10^{-3}$ & $< 10^{-4}$ & $2.6\times10^{-4}$ & $0.18$ & $1.8\times10^{-3}$ & Planet \\
+201635569.01 & $0.79$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $0.043$ & $0.06$ & $0.043$ & Candidate \\
+ \color{red} 201649426.01  & \color{red}  $3.10$  & \color{red}   -  & \color{red}  $0.856$  & \color{red}  $0.142$  & \color{red}  $1.6\times10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.998$  & \color{red}  FP\\
+201702477.01 & $0.70$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $4.0\times10^{-3}$ & $0.06$ & $4.0\times10^{-3}$ & Planet \\
+201736247.01 & $0.42$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $4.6\times10^{-4}$ & $0.18$ & $4.9\times10^{-4}$ & Planet \\
+201754305.01 & $0.65$ &  - & $2.5\times10^{-3}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $5.7\times10^{-3}$ & Planet \\
+201754305.02 & $0.38$ &  - & $1.9\times10^{-3}$ & $< 10^{-4}$ & $1.7\times10^{-3}$ & $0.22$ & $3.6\times10^{-3}$ & Planet \\
+ \color{red} 201779067.01  & \color{red}  $1.97$  & \color{red}   -  & \color{red}  $0.935$  & \color{red}  $0.063$  & \color{red}  $3.2\times10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.998$  & \color{red}  FP\\
+201828749.01 & $0.39$ &  Y & $2.6\times10^{-3}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.17$ & $2.6\times10^{-3}$ & Planet \\
+201855371.01 & $0.62$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
+201912552.01 & $0.47$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
+201929294.01 & $3.12$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $2.8\times10^{-4}$ & $0.07$ & $2.9\times10^{-4}$ & Planet 
 
 \enddata
 \tablecomments{blurgh.}
