FP table updates

--- a/ms.tex
+++ b/ms.tex
@@ -815,6 +815,7 @@ a cool analogue to the highly irradiated planets of a similar size found by
 
 
 \subsection{Two Candidates, One Ephemeris}
+\label{sec:ephemmatch}
 
 EPIC 201569483 was originally listed in \paperit\ as a planet candidate.
 The transit events have a depth of approximately 7\%.
