--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -8,12 +8,12 @@
 \label{Table:FPP}
 \tablehead{
 \colhead{Candidate} &
-\colhead{max($\delta_{\rm sec}$)} &
-\colhead{AO?} &
+\colhead{max($\delta_{\rm sec}$) [ppt]\tablenotemark{1}} &
+\colhead{AO?\tablenotemark{2}} &
 \colhead{${\rm Pr}_{\rm EB}$} &
 \colhead{${\rm Pr}_{\rm BEB}$} &
 \colhead{${\rm Pr}_{\rm HEB}$} &
-\colhead{$f_{p}$} &
+\colhead{$f_{p}$\tablenotemark{3}} &
 \colhead{FPP} &
 \colhead{Disposition}
 }
@@ -35,7 +35,7 @@
 201505350.02 & $0.70$ &  - & $0.034$ & $< 10^{-4}$ & $2.3\times10^{-4}$ & $0.07$ & $0.034$ & Candidate \\
 201546283.01 & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.06$ & $1.1\times10^{-4}$ & Planet \\
 201549860.01 & $0.18$ &  - & $7.5\times10^{-3}$ & $0.014$ & $0.011$ & $0.22$ & $0.032$ & Candidate \\
-201555883.01 & $0.94$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.6\times10^{-3}$ & $0.10$ & $3.6\times10^{-3}$ & Planet \\
+ \color{red} 201555883.01  & \color{red}  $0.94$  & \color{red}   -  & \color{red}  $< 10^{-4}$  & \color{red}  $< 10^{-4}$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  $0.10$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  FP\tablenotemark{a}\\
 201565013.01 & $1.69$ &  - & $0.460$ & $0.391$ & $0.035$ & $0.06$ & $0.887$ & Candidate \\
  \color{red} 201569483.01  & \color{red}  $2.06$  & \color{red}   -  & \color{red}  $0.437$  & \color{red}  $0.562$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.999$  & \color{red}  FP\\
 201577035.01 & $0.14$ &  Y & $3.0\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.07$ & $3.6\times10^{-4}$ & Planet \\
@@ -57,4 +57,8 @@
 
 \enddata
 \tablecomments{blurgh.}
+\tablenotetext{1}{Maximum depth of potential secondary eclipse signal.}
+\tablenotetext{2}{Whether adaptive optics observation is presented in this paper.}
+\tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
+\tablenotetext{a}{Declared a false positive because of epoch match to 201569483.01 (see \S\ref{sec:ephemmatch}).}
 \end{deluxetable*}
