--- a/ms.tex
+++ b/ms.tex
@@ -89,9 +89,9 @@
 \newcommand{\anytodo}[1]{\todo{ANYONE}{NavyBlue}{#1}}
 \newcommand{\dfmtodo}[1]{\todo{DFM}{ForestGreen}{#1}}
 
-\newcommand{\Nfp}{4}
-\newcommand{\Nvalidated}{22} %16 without contrast curves
-\newcommand{\Nlimbo}{10} %adds up to 36
+\newcommand{\Nfp}{5}
+\newcommand{\Nvalidated}{20} 
+\newcommand{\Nlimbo}{11} %adds up to 36
 
 \begin{document}
 
