--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -58,8 +58,9 @@
 \enddata
 \tablecomments{Results of the \texttt{vespa} astrophysical 
 false positive probability calculations for all candidates.  
-Likely false positives (FPP $> 0.9$) are marked in red.  
-Candidates are declared to be validated if FPP $< 0.01$.  
+Likely false positives (FPP $> 0.9$, or otherwise designated)
+ are marked in red.  
+Candidates are declared to be validated planets if FPP $< 0.01$.  
 EB, BEB, and HEB refer to the three considered astrophysical 
 false positive scenarios, and the relative probability of 
 each is listed in the appropriate column.}
