FPP table edits

--- a/ms.tex
+++ b/ms.tex
@@ -90,7 +90,8 @@
 \newcommand{\dfmtodo}[1]{\todo{DFM}{ForestGreen}{#1}}
 
 \newcommand{\Nfp}{5}
-\newcommand{\Nvalidated}{20} 
+\newcommand{\Nvalidated}{13} 
+\newcommand{\Nrecandidate}{7}
 \newcommand{\Nlimbo}{11} %adds up to 36
 
 \begin{document}
