--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -20,7 +20,7 @@
 \startdata
 201208431.01 & $0.51$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $7.0\times10^{-4}$ & $0.21$ & $7.0\times10^{-4}$ & Planet \\
  \color{red} 201257461.01  & \color{red}  $0.59$  & \color{red}   -  & \color{red}  $8.8\times10^{-3}$  & \color{red}  $0.940$  & \color{red}  $0.051$  & \color{red}  $0.17$  & \color{red}  $1.000$  & \color{red}  FP\\
-201295312.01 & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
+201295312.01 & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet\tablenotemark{c} \\
 201338508.01 & $0.63$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $3.2\times10^{-3}$ & Planet \\
 201338508.02 & $0.33$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $1.8\times10^{-4}$ & $0.22$ & $1.8\times10^{-4}$ & Planet \\
 201367065.01 & $0.15$ &  - & $0.717$ & $< 10^{-4}$ & $0.044$ & $0.07$ & $0.761$ & Candidate \\
@@ -33,9 +33,9 @@
 201465501.01 & $0.68$ &  - & $0.491$ & $0.022$ & $9.1\times10^{-3}$ & $0.20$ & $0.522$ & Candidate \\
 201505350.01 & $2.69$ &  - & $0.583$ & $< 10^{-4}$ & $0.024$ & $0.07$ & $0.607$ & Candidate \\
 201505350.02 & $0.70$ &  - & $0.034$ & $< 10^{-4}$ & $2.3\times10^{-4}$ & $0.07$ & $0.034$ & Candidate \\
-201546283.01 & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.06$ & $1.1\times10^{-4}$ & Planet \\
+201546283.01 & $0.15$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.06$ & $1.1\times10^{-4}$ & Candidate\tablenotemark{a} \\
 201549860.01 & $0.18$ &  - & $7.5\times10^{-3}$ & $0.014$ & $0.011$ & $0.22$ & $0.032$ & Candidate \\
- \color{red} 201555883.01  & \color{red}  $0.94$  & \color{red}   -  & \color{red}  $< 10^{-4}$  & \color{red}  $< 10^{-4}$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  $0.10$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  FP\tablenotemark{a}\\
+ \color{red} 201555883.01  & \color{red}  $0.94$  & \color{red}   -  & \color{red}  $< 10^{-4}$  & \color{red}  $< 10^{-4}$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  $0.10$  & \color{red}  $3.6\times10^{-3}$  & \color{red}  FP\tablenotemark{b}\\
 201565013.01 & $1.69$ &  - & $0.460$ & $0.391$ & $0.035$ & $0.06$ & $0.887$ & Candidate \\
  \color{red} 201569483.01  & \color{red}  $2.06$  & \color{red}   -  & \color{red}  $0.437$  & \color{red}  $0.562$  & \color{red}  $< 10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.999$  & \color{red}  FP\\
 201577035.01 & $0.14$ &  Y & $3.0\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.07$ & $3.6\times10^{-4}$ & Planet \\
@@ -50,7 +50,7 @@
 201754305.01 & $0.65$ &  - & $2.5\times10^{-3}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $5.7\times10^{-3}$ & Planet \\
 201754305.02 & $0.38$ &  - & $1.9\times10^{-3}$ & $< 10^{-4}$ & $1.7\times10^{-3}$ & $0.22$ & $3.6\times10^{-3}$ & Planet \\
  \color{red} 201779067.01  & \color{red}  $1.97$  & \color{red}   -  & \color{red}  $0.935$  & \color{red}  $0.063$  & \color{red}  $3.2\times10^{-4}$  & \color{red}  $0.00$  & \color{red}  $0.998$  & \color{red}  FP\\
-201828749.01 & $0.39$ &  Y & $2.6\times10^{-3}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.17$ & $2.6\times10^{-3}$ & Planet \\
+201828749.01 & $0.39$ &  Y & $2.6\times10^{-3}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.17$ & $2.6\times10^{-3}$ & Candidate\tablenotemark{a} \\
 201855371.01 & $0.62$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet \\
 201912552.01 & $0.47$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet \\
 201929294.01 & $3.12$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $2.8\times10^{-4}$ & $0.07$ & $2.9\times10^{-4}$ & Planet 
@@ -67,5 +67,9 @@ each is listed in the appropriate column.}
 \tablenotetext{1}{Maximum depth of potential secondary eclipse signal.}
 \tablenotetext{2}{Whether adaptive optics observation is presented in this paper.}
 \tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
-\tablenotetext{a}{Declared a false positive because of epoch match to 201569483.01 (see \S\ref{sec:ephemmatch}).}
+\tablenotetext{a}{Despite low FPP, returned to candidate status 
+out of abundance of caution due
+to secondary star detection in or near photometric aperture.  Most of these we do anticipate to be validated once the specific false positive scenarios are considered.}
+\tablenotetext{b}{Declared a false positive because of epoch match to 201569483.01 (see \S\ref{sec:ephemmatch}).}
+\tablenotetext{c}{Identified as planet by \citet{Crossfield15}.}
 \end{deluxetable*}
