comments from Mann

--- a/exopapers.bib
+++ b/exopapers.bib
@@ -3096,6 +3096,31 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Huber14,
+   author = {{Huber}, D. and {Silva Aguirre}, V. and {Matthews}, J.~M. and 
+	{Pinsonneault}, M.~H. and {Gaidos}, E. and {Garc{\'{\i}}a}, R.~A. and 
+	{Hekker}, S. and {Mathur}, S. and {Mosser}, B. and {Torres}, G. and 
+	{Bastien}, F.~A. and {Basu}, S. and {Bedding}, T.~R. and {Chaplin}, W.~J. and 
+	{Demory}, B.-O. and {Fleming}, S.~W. and {Guo}, Z. and {Mann}, A.~W. and 
+	{Rowe}, J.~F. and {Serenelli}, A.~M. and {Smith}, M.~A. and 
+	{Stello}, D.},
+    title = "{Revised Stellar Properties of Kepler Targets for the Quarter 1-16 Transit Detection Run}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1312.0662},
+ primaryClass = "astro-ph.EP",
+ keywords = {catalogs, planetary systems, stars: fundamental parameters, stars: oscillations, techniques: photometric},
+     year = 2014,
+    month = mar,
+   volume = 211,
+      eid = {2},
+    pages = {2},
+      doi = {10.1088/0067-0049/211/1/2},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJS..211....2H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Irwin10,
    author = {{Irwin}, J. and {Buchhave}, L. and {Berta}, Z.~K. and {Charbonneau}, D. and
 	{Latham}, D.~W. and {Burke}, C.~J. and {Esquerdo}, G.~A. and
