fpp table edits

--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -71,7 +71,7 @@ below 1\% threshold.}
 \tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
 \tablenotetext{a}{Despite low FPP, returned to candidate status 
 out of abundance of caution due
-to secondary star detection in or near photometric aperture.  Most of these we do anticipate to be validated once the specific false positive scenarios are considered.}
+to secondary star detection in or near photometric aperture.}
 \tablenotetext{b}{Declared a false positive due to noise modeling systematics (see \S\ref{sec:systematics}).}
 \tablenotetext{c}{Identified as planets by \citet{Crossfield15}.}
 \tablenotetext{d}{Identified as planets by \citet{Armstrong15b}.}
