updated BG table

--- a/ms.tex
+++ b/ms.tex
@@ -236,7 +236,7 @@ They then run PCA on all stars to measure the dominant modes, modeling each star
 linear combination of 150 of these ``eigen light curves'' and a transit signal.
 This method enables fitting without over-fitting, and also permits marginalization over
 uncertainties induced by the systematic model.
-Therefore, any uncertainties in the systematics can be propogated into uncertainties in
+Therefore, any uncertainties in the systematics can be propagated into uncertainties in
 detected planet parameters, instead of assuming the systematics are understood perfectly.
 Using this technique, \paperit{} detect 36 planet candidates orbiting 31 stars in \KT\
 \Ci\ data.
@@ -246,8 +246,9 @@ planet or the star.
 Additionally, the authors follow the convention of the \kep\ team to include any
 transit event as a candidate system rather than a false positive if a secondary eclipse
 is not detected: there is no enforced upper limit on the allowed planet radius.
-The authors intentionally make no effort to separate astrophysical false positives from
-true transiting planets, similar to the \kep\ ``objects of interest.''
+The authors intentionally make no effort to separate true transiting planets from 
+astrophysical events that mimic the appearance of transits, such as an eclipsing 
+binary with a high mass ratio, similar to the \kep\ team's list of ``objects of interest.''
 
 In this paper, we present stellar and planetary parameters for each system.
 Given these parameters and the transit data, as well as archival imaging, ground-based
