--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -20,14 +20,14 @@
 \startdata
 201208431.01 & $0.51$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $7.0\times10^{-4}$ & $0.21$ & $7.0\times10^{-4}$ & Planet  \\
  \color{red} 201257461.01  & \color{red}  $0.59$  & \color{red}   -  & \color{red}  $8.8\times10^{-3}$  & \color{red}  $0.940$  & \color{red}  $0.051$  & \color{red}  $0.17$  & \color{red}  $1.000$  & \color{red}  FP \\
-201295312.01 & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Planet  \\
+201295312.01 & $0.04$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.21$ & $< 10^{-4}$ & Candidate\tablenotemark{a}  \\
 201338508.01 & $0.63$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $3.2\times10^{-3}$ & $0.21$ & $3.2\times10^{-3}$ & Planet  \\
 201338508.02 & $0.33$ &  - & $< 10^{-4}$ & $< 10^{-4}$ & $1.8\times10^{-4}$ & $0.22$ & $1.8\times10^{-4}$ & Planet  \\
 201367065.01 & $0.15$ &  - & $0.717$ & $< 10^{-4}$ & $0.044$ & $0.07$ & $0.761$ & Planet\tablenotemark{c}  \\
 201367065.02 & $0.67$ &  - & $3.2\times10^{-3}$ & $< 10^{-4}$ & $4.2\times10^{-3}$ & $0.17$ & $7.4\times10^{-3}$ & Planet\tablenotemark{c}  \\
 201384232.01 & $0.44$ &  - & $1.2\times10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.16$ & $1.4\times10^{-4}$ & Planet  \\
 201393098.01 & $0.52$ &  - & $1.6\times10^{-3}$ & $< 10^{-4}$ & $5.5\times10^{-4}$ & $0.19$ & $2.2\times10^{-3}$ & Planet  \\
-201403446.01 & $0.18$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Planet  \\
+201403446.01 & $0.18$ &  Y & $< 10^{-4}$ & $< 10^{-4}$ & $< 10^{-4}$ & $0.22$ & $< 10^{-4}$ & Candidate\tablenotemark{a}  \\
 201445392.01 & $0.26$ &  - & $1.3\times10^{-3}$ & $< 10^{-4}$ & $0.012$ & $0.19$ & $0.013$ & Candidate  \\
 201445392.02 & $0.18$ &  - & $0.023$ & $< 10^{-4}$ & $0.254$ & $0.21$ & $0.277$ & Candidate  \\
 201465501.01 & $0.68$ &  - & $0.491$ & $0.022$ & $9.1\times10^{-3}$ & $0.20$ & $0.522$ & Candidate  \\
@@ -71,7 +71,7 @@ below 1\% threshold.}
 \tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
 \tablenotetext{a}{Despite low FPP, returned to candidate status 
 out of abundance of caution due
-to secondary star detection in or near photometric aperture.}
+to secondary star detection within or near photometric aperture.}
 \tablenotetext{b}{Declared a false positive due to noise modeling systematics (see \S\ref{sec:systematics}).}
 \tablenotetext{c}{Identified as planets by \citet{Crossfield15}.}
 \tablenotetext{d}{Identified as planets by \citet{Armstrong15b}.}
