--- a/ms.tex
+++ b/ms.tex
@@ -707,7 +707,7 @@ The candidates with identified companions that we judge to not be plausible
 sources of potential contamination are the following:
 \begin{itemize}
 
-\item 201546283.01--- For this system, the ``maximum depth// is nearly 
+\item 201546283.01--- For this system, the ``maximum depth'' is nearly 
 identical to the observed transit depth, which would require a perfectly
 V-shaped eclipse to explain.  As this is not the case (see Figure 2), 
 this signal cannot
