updating transit depths

--- a/planet_properties.ipynb
+++ b/planet_properties.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -271,6 +271,10 @@
     "    flatsamples = s0.reshape((-1, s0.shape[-1]))\n",
     "    samples = pd.DataFrame.from_items(zip(cols, flatsamples.T))\n",
     "    best_sample = dict(zip(cols, best_sample))\n",
+    "    \n",
+    "    depth = [np.exp(samples[\"ln_R_p_{0}\".format(i+1)]-samples[\"ln_R_star\"]) ** 2 * 1e3\n",
+    "           for i in range(nplanets)]\n",
+    "    return [(\"{0}.{1:02d}\".format(epic, i+1), np.median(r)) for i, r in enumerate(depth)]\n",
     "        \n",
     "    rows = []\n",
     "    for i in range(nplanets):\n",
@@ -403,6 +407,51 @@
     "        pl.xlim(-2, 2)\n",
     "        pl.savefig(os.path.join(d, \"{0}.png\".format(i+1)))\n",
     "    return rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "depths = [r for r0 in (process_row_2(e) for e in candidates) for r in r0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'201208431.01 1.19531216353\\n201257461.01 30.5405628364\\n201295312.01 0.300800323065\\n201338508.01 1.14221550359\\n201338508.02 1.07226277783\\n201367065.01 1.25616163177\\n201367065.02 0.724112897871\\n201384232.01 0.675109645038\\n201393098.01 0.526999339958\\n201403446.01 0.2314256856\\n201445392.01 1.24833537077\\n201445392.02 0.780598542568\\n201465501.01 2.8312717621\\n201505350.01 2.64223133764\\n201505350.02 5.23337371509\\n201546283.01 2.32895962394\\n201549860.01 0.795063349067\\n201555883.01 3.49953927664\\n201565013.01 45.7983620378\\n201569483.01 159.643328332\\n201577035.01 1.44112818262\\n201596316.01 0.697503071962\\n201613023.01 0.417427258286\\n201617985.01 1.09816124126\\n201629650.01 0.575017701945\\n201635569.01 9.43158851144\\n201649426.01 216.755248839\\n201702477.01 6.69946669158\\n201736247.01 1.21132410693\\n201754305.01 0.87326929207\\n201754305.02 0.798716618809\\n201779067.01 84.8713633064\\n201828749.01 0.761093144381\\n201855371.01 0.992580776468\\n201912552.01 2.85023085272\\n201929294.01 13.5596273688'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\\n\".join(map(\"{0[0]} {0[1]}\".format, depths))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"depths_ppt.txt\", \"w\") as f:\n",
+    "    f.write(\"\\n\".join(map(\"{0[0]} {0[1]}\".format, depths)) + \"\\n\")"
    ]
   },
   {
