--- a/ms.tex
+++ b/ms.tex
@@ -90,9 +90,8 @@
 \newcommand{\dfmtodo}[1]{\todo{DFM}{ForestGreen}{#1}}
 
 \newcommand{\Nfp}{5}
-\newcommand{\Nvalidated}{13} 
-\newcommand{\Nrecandidate}{7}
-\newcommand{\Nlimbo}{11} %adds up to 36
+\newcommand{\Nvalidated}{18} 
+\newcommand{\Nlimbo}{13} %adds up to 36
 
 \begin{document}
 
@@ -164,11 +163,15 @@ candidates orbiting 31 stars in \KT\ \Ci.
 In this contribution, we present stellar and planetary properties for all systems.
 We combine ground-based seeing-limited survey data and
 adaptive optics imaging with an automated transit analysis scheme to validate
-\Nvalidated\ candidates as planets and identify \Nfp\ candidates as likely false positives.
+\Nvalidated\ candidates as planets
+and identify \Nfp\ candidates as likely false positives.
 Of particular interest is EPIC 201912552, a bright (K=8.9) M2 dwarf
 hosting a $2.24 \pm 0.25 R_\odot$ planet with $T_{eq} = 271 \pm 16$ K and an
 orbital period of 33 days.
-We also present \texttt{vespa}, a new general-purpose implementation
+We also present two new open-source software packages that enabled this analysis:  
+\texttt{isochrones}, a flexible tool for fitting theoretical stellar 
+models to observational data to determine stellar properties; and 
+\texttt{vespa}, a new general-purpose implementation
 of the \citet{Morton12} procedure to calculate false positive probabilities
 and statistically validate transiting exoplanets.
 \end{abstract}
