--- a/ms.tex
+++ b/ms.tex
@@ -311,7 +311,7 @@ types than the Sun.}
 \subsection{Stellar Models}
 \label{sec:stellarparams}
 To convert the observed photometric data into physical properties for each
-star, we used the publicly available \texttt{isochrones} Python module\footnote{
+star, we used the new publicly available \texttt{isochrones} Python module\footnote{
 \url{http://github.com/timothydmorton/isochrones}}, a general-purpose
 interpolation tool for the fitting of stellar models to photometric or spectroscopic
 parameters.
