--- a/ms.tex
+++ b/ms.tex
@@ -948,10 +948,20 @@ JWST to probe planetary atmospheres.
 We have presented stellar parameters for all planet candidates systems identified by
 \paperit.
 We statistically validate \Nvalidated\ of the 36 candidates as bona fide planets, and we
-identify four as false positives.
-Of these planets, 4 have been previously validated in other works, while 17 are
+identify \Nfp\ as false positives.
+Of these planets, 4 have been previously validated in other works, while 14 are
 validated here for the first time.
-The 11 systems not validated as planets or false positives remain as planet candidates.
+The systems not validated as planets or false positives remain as planet candidates.
+
+Enabling much of this analysis are two new open-source Python packages: 
+\texttt{isochrones}\footnote{\url{http://github.com/timothydmorton/isochrones}}, 
+which we use to infer posteriors on physical stellar properties based
+on fitting theoretical stellar models to observed data; and \texttt{vespa}\footnote{
+\url{http://github.com/timothydmorton/vespa}}, a
+new implementation of the \citet{Morton12} transit false positive analysis scheme.  
+Both of these packages will continue to be useful in future analysis of transit candidates
+where comprehensive follow-up observations may be unavailable.
+
 
 With the exception of one object, all of the stellar parameters are derived from comparing
 photometric observations to the Dartmouth stellar evolution models.
